# image-downloader

./: .flake8  .gitlab-ci.yml  README.md  pyproject.toml
image_downloader/: __init__.py  console.py
tests/: conftest.py  sample_bad_input.txt  sample_input.txt  test_basic.py
