[tool.black]
line-length=79
target-version=["py38"]

[tool.coverage.run]
branch = true
source = ["image_downloader"]

[tool.coverage.paths]
source = ["image_downloader/"]

[tool.coverage.report]
fail_under = 90
skip_covered = true
show_missing = true

[tool.poetry]
name = "image-downloader"
version = "0.1.0"
description = ""
authors = ["zhukovgreen <iam@zhukovgreen.pro>"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^19.3.0"
aiofiles = "^0.4.0"
click = "^7.1.1"
pytest-profiling = "^1.7.0"
envparse = "^0.2.0"
aiohttp = "^3.6.2"
yarl = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-asyncio = "^0.10.0"
coverage = {version = "^5.0.3", extras = ["toml"]}

[tool.poetry.scripts]
image-dl = "image_downloader.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
